--- a/vars/packages.yml
+++ b/vars/packages.yml
@@ -13,6 +13,7 @@ homebrew_cask_packages:
 
 homebrew_packages:
   - name: ansible
+  - name: awscli
   - name: docker-compose
   - name: git
   - name: postgresql
