--- a/vars/packages.yml
+++ b/vars/packages.yml
@@ -16,6 +16,7 @@ homebrew_packages:
   - name: awscli
   - name: docker-compose
   - name: git
+  - name: mysql
   - name: postgresql
   - name: protobuf
   - name: rbenv
